feat:add response seller in user
